_assets/styles/core/_icon.scss
// SVG Icon Styles
.icon {
    width: 18px;
    height: 18px;
    vertical-align: sub;
    fill: currentColor;

    &.icon--info,
    &.icon--activity,
    &.icon--message-circle,
    &.icon--calendar {
        width: 36px;
        height: 36px;
    }

    &.icon--by,
    &.icon--de {
        width: 27px;
        height: 18px;
    }

    .carousel-caption &.icon--trending-up,
    .carousel-caption &.icon--heart,
    .carousel-caption &.icon--thumbs-up {
        width: 30px;
        height: 30px;
    }

    &.icon--fire-truck {
        width: 70px;
        height: 43px;
    }
    &.icon--home {
        width: 43px;
        height: 43px;
    }
}

span .icon--home {
    cursor: pointer;
}

